List/Set/Map handling in setter